--- a/index.html
+++ b/index.html
@@ -56,6 +56,42 @@
                 rules or orders be obeyed and punishing undesired behavior.</p>
         </div>
     </section>
+    <div>
+        <h2 class="entertainment">Children Entertainment</h2>
+    </div>
+    <section id="id" class="box-shadow">
+        <div class="img">
+            <img src="img/photo-5.jpg" alt="">
+        </div>
+        <div class="smile-face">
+            <h2 class="center">Smile Face</h2>
+            <p class="smiley">A smiley, sometimes referred to as a smiley face, is a basic ideogram that represents a
+                smiling face.
+                Since the 1950s it has become part of popular culture worldwide, used either as a standalone ideogram,
+                or as a form of communication, such as emoticons.A smiley, sometimes referred to as a smiley face, is a
+                basic ideogram that represents a
+                smiling face.
+                Since the 1950s it has become part of popular culture worldwide, used either as a standalone ideogram,
+                or as a form of communication, such as emoticons.</p>
+        </div>
+    </section>
+    <section class="love-home">
+        <div class="half">
+            <h2 id="reviews">Love Your Home Reviews</h2>
+            <p class="just">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, esse eum dolore
+                consequatur
+                laudantium
+                corporis hic dolorum tenetur! Accusantium, nulla?</p>
+        </div>
+        <div class="half">
+            <img id="safe" src="img/safehome.png" alt="">
+        </div>
+    </section>
+    <footer>
+        <p>@ North tower, Uttara, Dhaka-1230</p>
+    </footer>
+
+
 </body>
 
 </html>
